# redis-rs

./: .gitignore  Cargo.toml  README.md  build.rs
protobuf/: common.proto  proxy_service.proto  redis_service.proto
src/: lib.rs  utils.rs
src/protobuf/: mod.rs
src/service/: dashboard.rs  mod.rs  proxy_service.rs  redis_service.rs
src/store/: state.rs
