[package]
name = "redis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.59"

clap = { version = "4", features = ["derive"] }

crc = "3.0"

dashmap = "5.4.0"

etcd-client = "0.10.2"

log = "0.4"

rand = "0.8.5"

prost = { version = "0.11.0", default-features = false, features = [
    "prost-derive",
] }
prost-types = "0.11.0"

serde = { version = "1.0.144", features = ["rc", "serde_derive"] }
simple_logger = "4.0.0"

tokio = { version = "1.23.0", features = ["full"] }
tonic = { version = "0.8.0", features = ["tls"] }

url = "2.3.1"

[build-dependencies]
prost-build = "0.11.0"

tonic-build = "0.8.0"
